# agent

./: .gitignore  AGENTS.md  README.md
claude_demos_new/: README.md  main.py  notes.md  pyproject.toml
claude_demos_new/autonomous_coding/: agent.py  demo.py  main.py  test_agent.py  tools.py
claude_demos_new/computer_use/: agent.py  demo.py  main.py  test_agent.py  tools.py
claude_demos_new/customer_support/: agent.py  categories.json  demo.py  graph.py  knowledge.txt  main.py  nodes.py  state.py  test_agent.py  utils.py
claude_demos_new/customer_support/data/: categories.json  knowledge.txt
claude_demos_new/financial_analyst/: agent.py  demo.py  main.py  test_agent.py  tools.py
claude_langchain_demos/: .gitignore  README.md  notes.md  pyproject.toml
claude_langchain_demos/autonomous_coding/: agent.py  main.py  tools.py
claude_langchain_demos/computer_use/: agent.py  main.py  tools.py
claude_langchain_demos/customer_support/: knowledge.txt  main.py
claude_langchain_demos/financial_analyst/: agent.py  main.py  tools.py
claude_langchain_quickstarts/: README.md  notes.md  requirements.txt
claude_langchain_quickstarts/browser_use_demo/: agent.py
claude_langchain_quickstarts/computer_use_demo/: agent.py
claude_langchain_quickstarts/customer_support_agent/: agent.py  customer_support_categories.json  data.txt
claude_langchain_quickstarts/financial_data_analyst/: agent.py
claude_langgraph_demos/: README.md  main.py  notes.md  pyproject.toml  requirements.txt
claude_langgraph_demos/autonomous_coding/: .gitignore  __init__.py  agent.py  main.py  test_tools.py  tools.py
claude_langgraph_demos/autonomous_coding/tools/: __init__.py  tools.py
claude_langgraph_demos/browser_use_demo/: README.md  __init__.py  agent.py
claude_langgraph_demos/computer_use_demo/: README.md  __init__.py  agent.py  tools.py
claude_langgraph_demos/customer_support_agent/: README.md  __init__.py  agent.py  dummy_kb.txt  setup_kb.py  tools.py
claude_langgraph_demos/customer_support_agent/faiss_index/: index.faiss  index.pkl
claude_langgraph_demos/customer_support_agent/prompts/: system.md
claude_langgraph_demos/financial_data_analyst/: README.md  __init__.py  agent.py  tools.py
claude_quickstarts_langchain/: README.md  main.py  notes.md  pyproject.toml  requirements.txt  verify_all.py
claude_quickstarts_langchain/autonomous_coding/: graph.py  main.py  prompts.py  tools.py
claude_quickstarts_langchain/autonomous_coding_agent/: README.md  graph.py  main.py
claude_quickstarts_langchain/computer_use/: graph.py  main.py  tools.py
claude_quickstarts_langchain/computer_use_demo/: README.md  graph.py  main.py
claude_quickstarts_langchain/customer_support/: graph.py  knowledge_base.txt  main.py  rag.py  state.py
claude_quickstarts_langchain/customer_support_agent/: README.md  graph.py  knowledge_base.txt  main.py
claude_quickstarts_langchain/financial_analyst/: graph.py  main.py  tools.py
claude_quickstarts_langchain/financial_data_analyst/: README.md  graph.py  main.py
faiss_index/: index.faiss  index.pkl
fastapi_tutorial/: README.md  notes.md  pyproject.toml
fastapi_tutorial/01_basics/: README.md  main.py
fastapi_tutorial/02_intermediate/: README.md  database_app.py  dependencies.py
fastapi_tutorial/03_advanced/: README.md  background_tasks.py  websockets_app.py
investigation-workflow/: README.md  notes.md
langchain_claude_demos/: README.md  notes.md  requirements.txt
qwen_api_demo/: README.md  git_diff.patch  notes.md  qwen_api_examples.py
(+41 files in other folders)
