[project]
name = "claude-demos-new"
version = "0.1.0"
description = "LangChain and LangGraph implementations of Claude Quickstarts"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.2.0"
]
requires-python = ">=3.9"

[tool.uv]
